# vif

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: config.rs  embedding.rs  listener.rs  main.rs  media.rs  vectors.rs
src/routes/: index.rs  links.rs  mod.rs  providers.rs  search.rs
src/routes/_user/: index.rs  links.rs  mod.rs  search.rs
vencord/: BetterGifSearch.tsx  README.md
