[package]
name = "vif"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8"
base64 = "0.22.1"
brest = { version = "0.2", features = ["axum"] }
eyre = "0.6"
figment = { version = "0.10.19", features = ["json", "env", "toml", "yaml"] }
futures = "0.3.32"
futures-util = "0.3"
infer = "0.19.0"
qdrant-client = { version = "1.18.0", features = ["uuid"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.21.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23", features = ["serde", "v5"] }
